# steam-apps

./: .gitignore  Cargo.toml  README.md  appids.all.json  apps.hardware.json  apps.software.json  apps.videos.json  manifest.json
.github/workflows/: update-catalog.yml
src/: lib.rs  main.rs
