[package]
name = "steam-apps"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "query", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
